--- a/index.html
+++ b/index.html
@@ -63,7 +63,7 @@
             <div class="text-area container p-2">
                 <h2 class="">Hi there! We are the new kids on the block <br>
                     and we build awesome websites and mobile apps.</h2>
-                <button type="button" class="btn btn-lg btn-primary" disabled>WORK WITH US!</button>
+                <button type="button" class="btn btn-lg btn-primary">WORK WITH US!</button>
             </div>
 
         </div>
@@ -144,7 +144,7 @@
         </div>
     </section>
 
-
+    <!--------------------------------------------------- meet our BEAUTIFUL--------------------------------------------------- -->
 
     <section class=" middle-area ">
 
@@ -391,7 +391,7 @@
                     <div class="col-sm-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 marign">
                         <div class="abbb">
                             <div class=" d-flex justify-content-center align-items-center">
-                                <img src="images/a1.png" alt="">
+                                <img class="img-fluid" src="images/a1.png" alt="">
                             </div>
                             <div class="text3">
                                 <h2 class="text-center">Isometric Perspective Mock-Up
@@ -405,7 +405,7 @@
                     <div class="col-sm-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 marign">
                         <div class="abbb">
                             <div class=" d-flex justify-content-center align-items-center">
-                                <img src="images/a2.png" alt="">
+                                <img class="img-fluid" src="images/a2.png" alt="">
                             </div>
                             <div class="text3">
                                 <h2 class="text-center">Time Zone App UI
@@ -418,7 +418,7 @@
                     <div class="col-sm-12 col-sm-12 col-md-12 col-lg-6 6col-xl-6 marign ">
                         <div class="abbb">
                             <div class=" d-flex justify-content-center align-items-center">
-                                <img src="images/a3.png" alt="">
+                                <img class="img-fluid" src="images/a3.png" alt="">
                             </div>
                             <div class="text3">
                                 <h2 class="text-center">Viro Media Players UI
@@ -431,7 +431,7 @@
                     <div class="col-sm-12 col-sm-12 col-md-12 col-lg-6 col-xl-6 marign">
                         <div class="abbb">
                             <div class=" d-flex justify-content-center align-items-center">
-                                <img src="images/a4.png" alt="">
+                                <img class="img-fluid" src="images/a4.png" alt="">
                             </div>
                             <div class="text3">
                                 <h2 class="text-center">Blog / Magazine Flat UI Kit
@@ -449,6 +449,161 @@
         </div>
 
     </section>
+    <!-----------------------------------poeple say about us --------------------------------------------------------- -->
+    <section class="last-section pt-4">
+
+        <div class="container">
+            <div class="text d-flex flex-column text-cente align-items-center pt-4">
+                <h2 class="text-center pt-4">WHAT POEPLE SAY ABOUT US</h2>
+
+                <hr class="text-center hier">
+
+                <p class="text-center">Our clients love us!</p>
+            </div>
+            <div class="container">
+                <div class="row">
+                    <div class=" col-sm-6 col-md-6 col-lg-6 col-sm-12 pt-4">
+                        <div class="abbb row">
+                            <div class="col-md-3 pt-4">
+                                <div class="image  d-flex justify-content-center align-items-center">
+                                    <img src="images/m2.jpeg" alt="">
+                                </div>
+                            </div>
+                            <div class="text3 col-md-9">
+                                <h2 class="text-left">ANNE HATHAWAY
+                                </h2>
+                                <a class="text-left" href="#">CEO / Marketing Guru</a>
+                                <p class="text-left">Lorem ipsum dolor sit amet,
+                                    consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                    dolore magna.</p>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-sm-6 col-md-6 col-lg-6 col-sm-12 pt-4">
+                        <div class="abbb row">
+                            <div class="col-md-3  pt-4">
+                                <div class="image  d-flex justify-content-center align-items-center">
+                                    <img src="images/m2.jpeg" alt="">
+                                </div>
+                            </div>
+                            <div class="text3 col-md-9">
+                                <h2 class="text-left">ANNE HATHAWAY
+                                </h2>
+                                <a class="text-left" href="#">CEO / Marketing Guru</a>
+                                <p class="text-left">Lorem ipsum dolor sit amet,
+                                    consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                    dolore magna.</p>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-sm-6 col-md-6 col-lg-6 col-sm-12 pt-4">
+                        <div class="abbb row">
+                            <div class="col-md-3  pt-4">
+                                <div class="image  d-flex justify-content-center align-items-center">
+                                    <img src="images/m2.jpeg" alt="">
+                                </div>
+                            </div>
+                            <div class="text3 col-md-9">
+                                <h2 class="text-left">ANNE HATHAWAY
+                                </h2>
+                                <a class="text-left" href="#">CEO / Marketing Guru</a>
+                                <p class="text-left">Lorem ipsum dolor sit amet,
+                                    consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                    dolore magna.</p>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                    <div class=" col-sm-6 col-md-6 col-lg-6 col-sm-12 pt-4">
+                        <div class="abbb row">
+                            <div class="col-md-3  pt-4">
+                                <div class="image  d-flex justify-content-center align-items-center">
+                                    <img src="images/m2.jpeg" alt="">
+                                </div>
+                            </div>
+                            <div class="text3 col-md-9">
+                                <h2 class="text-left">ANNE HATHAWAY
+                                </h2>
+                                <a class="text-left" href="#">CEO / Marketing Guru</a>
+                                <p class="text-left">Lorem ipsum dolor sit amet,
+                                    consectetuer adipiscing elit, sed diam nonummy nibh euismod tincidunt ut laoreet
+                                    dolore magna.</p>
+
+
+                            </div>
+                        </div>
+
+                    </div>
+                </div>
+
+            </div>
+
+        </div>
+    </section>
+    <!------------------------------------------------- footer-section------------------------------------------------------------------ -->
+    <footer class="footer-area pt-4">
+
+        <div class="container">
+            <div class="text d-flex flex-column text-cente align-items-center pt-4">
+                <h2 class="text-center pt-4">GET IN TOUCH</h2>
+
+                <hr class="text-center hier">
+
+                <p class="text-center">1600 Pennsylvania ave NW, washington , DC 20500, united states of america.
+                    tel:(202) 456-1111</p>
+            </div>
+            <div class="container">
+                <div class="mx-auto w-75">
+                    <form class="" action="">
+                        <div class="row">
+                            <div class="cool mt-2 col-md-6 col-sm-12">
+                                <label for=""><span>*</span></label>
+                                <input type="email" placeholder="Your Email">
+                            </div>
+                            <div class="cool mt-2 col-md-6 col-sm-12">
+                                <label for=""><span>*</span></label>
+                                <input type="text" placeholder="Your Name">
+                            </div>
+                        </div>
+                        <div class="text-area mt-4 coool">
+                            <label for=""><span>*</span></label>
+                            <textarea placeholder="Your massege" name="Your massege" id="" cols="30"
+                                rows="10"></textarea>
+                        </div>
+                        <div class="d-flex p-4 justify-content-center">
+                            <input type="submit" value="sent massege" class="text-white p-2 bg-info border-none">
+
+                        </div>
+                    </form>
+                </div>
+
+            </div>
+
+        </div>
+
+        <div class="backgrounddd">
+            <div class="container ">
+                <div class="d-flex">
+                    <p class="p-4 text-white text-center ml-4 fs-3">Facebook</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Twitter</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Google+</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Linkedin</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Behance</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Dribbble</p>
+                    <p class="p-4 text-white text-center ml-4 fs-3">Github</p>
+                </div>
+            </div>
+        </div>
+    </footer>
+
 
 
 
