--- a/index.html
+++ b/index.html
@@ -591,14 +591,13 @@
 
         <div class="backgrounddd">
             <div class="container ">
-                <div class="d-flex">
-                    <p class="p-4 text-white text-center ml-4 fs-3">Facebook</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Twitter</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Linkedin</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Google+</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Behance</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Github</p>
-                    <p class="p-4 text-white text-center ml-4 fs-3">Dribbble</p>
+                <div class="row">
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Facebook</p>
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Twitter</p>
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Linkedin</p>
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Google+</p>
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Behance</p>
+                    <p class=" col-6 col-lg-2 col-md-2 col-sm-4 p-4 text-white text-center  fs-3">Github</p>
                 </div>
             </div>
         </div>
